구조 변경, 댓글 달기 및 삭제 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 
 #profile
 spring.profiles.include=secret
+
+#exception
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
