--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.profiles.include=secret
 #exception
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+
+#tracking modes
+server.servlet.session.tracking-modes=cookie
