--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,6 @@ spring.profiles.include=secret
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
-#tracking modes
+#session
 server.servlet.session.tracking-modes=cookie
+server.servlet.session.timeout=1800
